test_suite5/ALAN/test_suite/alan-2022-examples/failing/004430_mutation.alan
source A0 begin leave[(2) end
